# react-native-lingua

./: .gitignore  BUILD.md  CONTRIBUTING.md  LICENSE  Lingua.podspec  PUBLISH.md  README.md  SETUP.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  react-native-lingua-0.2.0.tgz  tsconfig.json
.github/ISSUE_TEMPLATE/: config.yml
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/java/com/lingua/: JNIOnLoad.kt  LinguaModule.kt  LinguaPackage.kt
android/src/main/jni/include/: liblingua.h
cpp/: lingua.cpp  lingua.h
example/: app.json  package.json  pnpm-lock.yaml
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/lingua/example/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile
example/ios/LinguaExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/LinguaExample.xcodeproj/: project.pbxproj
example/ios/LinguaExample.xcodeproj/xcshareddata/xcschemes/: LinguaExample.xcscheme
example/ios/LinguaExample.xcworkspace/: contents.xcworkspacedata
example/src/: App.tsx
ios/: Lingua.h  Lingua.mm  build.sh
ios/liblingua_native.xcframework/: Info.plist
ios/liblingua_native.xcframework/ios-arm64/Headers/: liblingua.h
patches/: react-native@0.82.1.patch
rust/: Cargo.toml  Makefile  build.rs  rust-toolchain.toml
rust/src/: lib.rs
src/: NativeLingua.ts  index.tsx
